# fl-security-testbed

./: README.md  conftest.py  pyproject.toml  requirements.txt  run.py
attacks/: __init__.py  byzantine.py  label_flip.py  registry.py
clients/: client.py  dataset.py  model.py
experiments/: aggregation_benchmark.py  config.py  runner.py
experiments/results/: aggregation_benchmark.json
fl_testbed/: __init__.py  attacks.py  data.py  defenses.py  models.py  runner.py
server/: aggregation.py  server.py
tests/: conftest.py  test_aggregation.py  test_attacks.py  test_model.py
